--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -172,6 +172,7 @@ $font-size-sidebar-listitem:    $font-size-sidebar;
 $font-size-nav-blockquote:	16;
 $font-size-nav-blockquote-cite:	14;
 $font-size-nav-introtext:	15;
+$font-size-nav-flyout-items:	15;
 
 
 $font-size-h1:			32;
