--- a/css/sass/structure/_layout.scss
+++ b/css/sass/structure/_layout.scss
@@ -117,6 +117,22 @@ html, body, button {
 }
 
 
+.flyout-entries,
+.introthumb,
+.introtext {
+    @extend .col-xs-12;
+    @extend .col-sm-4;
+}
+.introtext-full {
+    @extend .col-xs-12;
+    @extend .col-sm-8;
+}
+.flyout-entries-full {
+     @extend .col-xs-12;
+}
+
+
+
 .footer-logo {
     @extend .col-xs-6;
     @extend .col-sm-3;
