--- a/css/base.css
+++ b/css/base.css
@@ -2406,6 +2406,12 @@ html, body, button { font-family: "roboto", "Helvetica Neue", Helvetica, Arial, 
 
 .search-results .searchresult-image { text-align: right; }
 
+.inline-box { display: flex; flex-wrap: wrap; }
+.inline-box .sidebar-inline { order: 2; }
+.inline-box .content-inline { order: 1; width: 100%; }
+@media (min-width: 768px) { .inline-box { display: inline-block; }
+  .inline-box .sidebar-inline, .inline-box .content-inline { display: inline; } }
+
 .footer-meta { text-align: right; }
 
 [class*="span"] { float: left; min-height: 1px; margin-left: 20px; }
@@ -2738,38 +2744,11 @@ html, body, button { font-family: "roboto", "Helvetica Neue", Helvetica, Arial, 
 .helpermenus li a { text-decoration: none; display: table-cell; padding: 5px 12px; font-size: 13px; line-height: 16px; }
 .helpermenus li a:hover, .helpermenus li a:focus { text-decoration: none; background-color: #dde5f0; }
 
-/*
-.page-template-page-subnav { #content {
-	.span8 {
-	    img {		
-		&.alignleft, 
-		&.alignright, 
-		&.size-full {
-		    vertical-align: top;
-		    overflow: hide;
-	        }
-		&.size-full {
-		    clear: both;
-		}
-	    }
-	    div.alignleft, 
-	    img.alignleft {
-		clear: none;
-		
-	    }
-	} }
-}
-
-*/
 @media (max-width: 767px) { ul.menu { margin-bottom: 10px; }
   #subnav ul { margin-left: 0; margin-right: 0; }
   #content ul.menu, #content ul.menu ul { margin-left: 0; margin-right: 0; }
   #content .subpages-menu a.image.ext-link:after { display: none; } }
-@media (max-width: 480px) { .page-template-page-subnav #content { margin-left: 15px; margin-right: 15px; }
-  .page-template-page-subnav #content .span4 { padding-bottom: 10px; }
-  .page-template-page-subnav #content .container .sidebar-inline { width: 100%; border-left: none; padding-left: 15px; padding-right: 15px; }
-  .page-template-page-subnav #content .container aside.widget:first-child { border-top: 2px solid #e9edf2; }
-  #content .subpages-menu .menu-item { margin: 0 0 10px 0; }
+@media (max-width: 480px) { #content .subpages-menu .menu-item { margin: 0 0 10px 0; }
   #content .subpages-menu ul { display: block; }
   #content .subpages-menu li { width: 100%; margin: 0 0 10px 10px; list-style: inside none circle; float: none; }
   #content .subpages-menu li a.image { width: 100%; height: auto; max-height: 110px; text-align: center; }
@@ -2907,15 +2886,14 @@ html, body, button { font-family: "roboto", "Helvetica Neue", Helvetica, Arial, 
 /*-----------------------------------------------------------------------------------*/
 /* Global content definitions
 /*-----------------------------------------------------------------------------------*/
-#content { padding: 20px 0 30px 0; }
+#content { padding: 20px 0 0 0; }
+@media (min-width: 768px) { #content { padding-bottom: 30px; } }
 #content .container { position: relative; }
 #content main { font-size: 16px; line-height: 22.4px; font-size: 1rem; line-height: 1.4rem; color: #444; font-family: "roboto", "Helvetica Neue", Helvetica, Arial, sans-serif; padding-top: 10px; }
 #content main .sidebar-inline { font-size: 14px; line-height: 19.6px; font-size: 0.875rem; line-height: 1.225rem; }
 
-@media (max-width: 480px) { #content { padding-bottom: 0; }
-  .page-template-page-start-sub.js-enabled #hero .banner { top: 0; bottom: 0; } }
-@media (max-width: 767px) { #content { margin-left: 15px; margin-right: 15px; padding-bottom: 0px; }
-  #content ul.page-print-actions { display: none; } }
+@media (max-width: 480px) { .page-template-page-start-sub.js-enabled #hero .banner { top: 0; bottom: 0; } }
+@media (max-width: 767px) { #content ul.page-print-actions { display: none; } }
 @media (max-width: 992px) { #content ul.page-print-actions { top: 440px; } }
 /*-----------------------------------------------------------------------------------*/
 /* Assistant
@@ -3237,15 +3215,15 @@ ul.assistant-tabs-nav li:last-child { border: none; }
 /* Sidebar 
 /*-----------------------------------------------------------------------------------*/
 /* Sidebar: Inline */
-.sidebar-inline { float: right; min-width: 220px; margin-left: 30px; margin-bottom: 11px; margin-right: -15px; padding-left: 15px; border-left: 2px solid #dde5f0; }
+.sidebar-inline { float: right; min-width: 220px; width: 100%; border-top: 2px solid #dde5f0; margin: 10px 0; padding-top: 10px; }
 .sidebar-inline .widget { margin-bottom: 22px; margin-top: 22px; }
 .sidebar-inline .widget:last-child { margin-bottom: 0 !important; }
 .sidebar-inline .widget:first-child { margin-top: 0 !important; }
 .content-portal .sidebar-inline { margin-top: 22px; }
-@media (max-width: 1200px) { .sidebar-inline { width: 220px; } }
+@media (min-width: 768px) { .sidebar-inline { border-top: none; width: 220px; margin-top: 0; margin-left: 30px; margin-right: -15px; padding-top: 0; padding-left: 15px; border-left: 2px solid #dde5f0; } }
 @media (min-width: 1201px) { .sidebar-inline { width: 300px; } }
 @media (min-width: 1700px) { .sidebar-inline { width: 300px; } }
-@media (max-width: 1400px) { .page-template-page-subnav .sidebar-inline { width: 220px; } }
+@media (min-width: 1201px) { .page-template-page-subnav .sidebar-inline { width: 220px; } }
 
 /*-----------------------------------------------------------------------------------*/
 /* Widgets
@@ -3502,9 +3480,15 @@ input[type="submit"]:active { background: #1f4c7a; }
 /*-----------------------------------------------------------------------------------*/
 /* Tables
 /*-----------------------------------------------------------------------------------*/
-table { border: 0; background: transparent; border-top: 1px solid #dfe6ec; border-bottom: 1px solid #dfe6ec; margin: 5px 0 20px 0; width: 100%; }
+.table-wrapper { position: relative; overflow: hidden; margin: 0; border-right: 1px solid #dfe6ec; }
+@media (min-width: 768px) { .table-wrapper { border-right: none; } }
+.table-wrapper .scrollable { overflow-x: auto; overflow-y: hidden; }
+
+table { border: 0; background: transparent; border-top: 1px solid #dfe6ec; border-bottom: 1px solid #dfe6ec; margin: 0; width: 100%; }
+@media (min-width: 768px) { table { margin: 5px 0 20px 0; }
+  table th, table td { padding: 7px 10px; } }
 table tbody, table tr, table th, table td { border: 0; }
-table th, table td { padding: 7px 10px; font-size: 13px; line-height: 18px; }
+table th, table td { padding-left: 15px; padding-right: 15px; font-size: 13px; line-height: 18px; }
 table th { color: #444; background: #dfe6ec; font-weight: bold; border-top: 1px solid #dfe6ec; border-bottom: 1px solid #dfe6ec; text-align: left; }
 table td { border-right: 1px solid #fff; color: #444; }
 table td p { font-size: 13px; line-height: 18px; }
@@ -3513,17 +3497,14 @@ table tr:nth-child(odd) td { color: #1f4c7a; background: #e9edf2; }
 table tr:nth-child(odd) td ul li { color: #1f4c7a; }
 table ul li { color: #003366; font-size: 13px; line-height: 18px; background-position: left 5px; }
 
-@media (max-width: 767px) { div.table-wrapper { position: relative; margin-bottom: 20px; margin-left: 15px; margin-right: 15px; overflow: hidden; border-right: 1px solid #ccc; }
-  div.table-wrapper .scrollable { overflow-x: auto; overflow-y: hidden; }
-  table { margin: 0; }
-  table td, table th { padding-left: 15px; padding-right: 15px; } }
 /*-----------------------------------------------------------------------------------*/
 /* Blockquotes, Cites
 /*-----------------------------------------------------------------------------------*/
 blockquote { padding: 0; margin: 0; border: none; font-family: Georgia, serif; font-style: italic; position: relative; font-size: 16px; line-height: 26px; font-size: 1rem; line-height: 1.625rem; }
 blockquote p { font-family: Georgia, serif; font-size: 16px; line-height: 26px; font-size: 1rem; line-height: 1.625rem; font-weight: 400; font-style: italic; }
 blockquote p strong { font-weight: bolder; }
-#content blockquote { font-style: italic; margin: 10px 50px; padding-left: 60px; min-height: 50px; }
+#content blockquote { font-style: italic; margin: 10px; padding-left: 50px; min-height: 50px; }
+@media (min-width: 768px) { #content blockquote { margin: 10px 50px; padding-left: 60px; } }
 #content blockquote p { color: #003366; }
 #content .sidebar-inline blockquote { margin: 10px; }
 blockquote small, blockquote cite { display: block; text-align: right; font-size: 15px; line-height: 21px; font-size: 0.9375rem; line-height: 1.3125rem; color: #797676; }
@@ -3532,6 +3513,8 @@ blockquote.pull-right { border-right: none; padding-right: 50px; }
 blockquote.pull-right::before { content: ""; }
 blockquote.pull-right::after { content: "\201C"; font-family: Georgia, serif; font-size: 70px; font-weight: bold; color: #797676; position: absolute; right: 10px; top: 10px; }
 blockquote::before { content: "\201C"; font-family: Georgia, serif; font-size: 70px; font-weight: bold; color: #797676; position: absolute; left: 10px; top: 10px; }
+#content blockquote::before { color: #003366; left: 0px; }
+@media (min-width: 768px) { #content blockquote::before { left: 10px; } }
 blockquote::after { content: ""; }
 #content .sidebar-inline blockquote, #content blockquote.noquote { background: inherit; padding-left: 0; padding-right: 0; }
 #content .sidebar-inline blockquote::after, #content .sidebar-inline blockquote::before, #content blockquote.noquote::after, #content blockquote.noquote::before { content: ""; }
