--- a/css/sass/structure/_layout.scss
+++ b/css/sass/structure/_layout.scss
@@ -132,6 +132,29 @@ html, body, button {
 }
 
 
+.inline-box {
+    display: flex;   
+    flex-wrap: wrap;
+
+    .sidebar-inline {
+	order: 2;
+    }
+    .content-inline {
+	order: 1;
+	width: 100%;
+    }
+     @media (min-width: $screen-sm) {
+	 display: inline-block; 
+	 .sidebar-inline,
+	 .content-inline {
+	     display: inline;
+	     
+
+	 }
+	 
+    }
+}
+
 
 .footer-logo {
     @extend .col-xs-6;
