--- a/css/sass/structure/_sidebar.scss
+++ b/css/sass/structure/_sidebar.scss
@@ -7,12 +7,10 @@
 .sidebar-inline {
 	float: right;
 	min-width: 220px;	
-	margin-left: $fau-gutter-width;
-	margin-bottom: 11px;
-	margin-right: - ceil(($fau-gutter-width / 2));
-	padding-left: ceil(($fau-gutter-width / 2));	
-	border-left: 2px solid $colorLightest;
-	
+	width: 100%;
+	border-top: 2px solid $colorLightest;
+	margin: 10px 0;
+	padding-top: 10px;
 	
 	.widget {
 		margin-bottom: 22px;
@@ -31,10 +29,17 @@
 		margin-top: 22px;
 	}
 	
-	
-	@media (max-width: $screen-lg) {
+	@media (min-width: $screen-sm) {
+	    border-top: none;
 	    width: 220px;
+	    margin-top: 0;
+	    margin-left: $fau-gutter-width;
+	    margin-right: - ceil(($fau-gutter-width / 2));
+	    padding-top: 0;
+	    padding-left: ceil(($fau-gutter-width / 2));	
+	    border-left: 2px solid $colorLightest;
 	}
+
 	@media (min-width: $screen-lg +1) {
 	    width: 300px;
 	}
@@ -43,7 +48,7 @@
 	}
 	
 	.page-template-page-subnav & {
-	    @media (max-width: $screen-xl) {
+	    @media (min-width: $screen-lg +1) {
 		width: 220px;
 	    }
 	}
