--- a/css/sass/structure/content/_global.scss
+++ b/css/sass/structure/content/_global.scss
@@ -4,7 +4,12 @@
 
 
 #content {
-    padding: 20px 0 30px 0;
+    padding: 20px 0 0 0;
+    
+
+    @media (min-width: $screen-sm) {
+	padding-bottom: 30px;
+    }
     
     .container {
 	position: relative;
@@ -21,14 +26,7 @@
     }
 }
 
-
-
 @media (max-width: $breakSM) {
-  
-    #content {
-	padding-bottom: 0;
-    }
-   
     .page-template-page-start-sub  {
 	&.js-enabled #hero {
 	    .banner {
@@ -40,20 +38,12 @@
 
 }
 
-
-
 @media (max-width: $breakMD) {
 
 	#content {
-	    margin-left: 15px;
-	    margin-right: 15px;
-	    padding-bottom: 0px;
-	     
 	    ul.page-print-actions {
 		display: none;
 	    }
-	   
-
 	}
 
 }
