--- a/css/sass/structure/navigation/_metanav.scss
+++ b/css/sass/structure/navigation/_metanav.scss
@@ -1,14 +1,13 @@
 /*-----------------------------------------------------------------------------------*/
-/* Meta-Nav
+/* Meta-Navigation
 /*-----------------------------------------------------------------------------------*/
-
-	
-/* Meta-Navigation */
+.orgalist,
 #meta-nav {
 	@include no-list;
 	padding: 0;
 	overflow: hidden;
 	
+
 	li {
 		@include no-list;
 		@include inline-block;
@@ -53,35 +52,6 @@
 			right: 11px;
 		}
 	}
-	li.fauhome {
-	    padding-right: 5px;
-	    margin-right: 10px;	    
-	}
-	li.fauhome:before {
-	    @extend .fa;
-	    @extend .fa-long-arrow-up;
-	    margin-left: 5px;
-	    margin-right: 5px;
-	}
-	li.facultyhome {
-	    padding-right: 5px;
-	    padding-left: 5px;
-	    margin-right: 10px;
-	    margin-left: -15px;
-	   
-	}
-
-	
-	
-	li.fauhome, li.facultyhome {
-	    @include transition(background, 0.2s ease-out);
-	}
-	li.fauhome:hover, li.fauhome:focus, 
-	li.facultyhome:hover, li.facultyhome:focus {
-	    background: $colorMetaFAUHomeBackground;
-	    @include transition(background, 0.1s);
-	}
-	   
 	
 	
 	ul.sub-menu {
@@ -118,14 +88,107 @@
 		display: block;
 	}
 }
-
-
-@media (max-width: $breakMD) {
-    	.js {	
-
-	    #meta-nav {
-		display: none;
-	    }
+#meta-nav {
+    display: none;
+    @media (min-width: $screen-sm) {
+	display: inline;   
+    }
+    
+    #off-canvas & {
+	display: block;
+	margin: 10px;    
+	li {
+		display: block;
+		float: none;
+		margin: 0;
+	//	border-bottom: 1px solid #ccc;
+		a {
+		    display: block;
+		    float: none;
+		    @include border-radius(0);
+		    margin-bottom: 0;
+		    padding: 2px 0;
+		}
 	}
-	    
+
+    }
 }
+.orgalist {
+    display: block;   
+    margin: 0 auto;
+    text-align: center;
+    
+    li.fauhome {
+	padding-right: 5px;
+	margin-right: 10px;	    
+    }
+    li.fauhome:before {	
+	@extend .fa;
+	@extend .fa-long-arrow-up;
+	margin-left: 5px;
+	margin-right: 5px;
+    }
+    li.facultyhome {
+	padding-right: 5px;
+	padding-left: 5px;
+	margin-right: 10px;
+	margin-left: -15px;
+    }
+
+    li.fauhome, li.facultyhome {
+	@include transition(background, 0.2s ease-out);
+    }
+    li.fauhome:hover, li.fauhome:focus, 
+    li.facultyhome:hover, li.facultyhome:focus {
+	background: $colorMetaFAUHomeBackground;
+	@include transition(background, 0.1s);
+    }
+    
+    @media (max-width: $screen-sm) {
+	li.fauhome:before {	
+	    display: none;
+	    content: "";
+	}
+    }
+    
+    @media (min-width: $screen-sm) {
+	display: inline;
+	margin: 0;
+	text-align: left;
+    }
+    
+    
+}
+
+
+
+/*
+ul#meta-nav {
+			display: block;
+			margin-left: 0 !important;
+			margin-right: 0 !important;
+			background: $colorLightest;
+
+			li {
+				display: block;
+
+				a {
+					display: block;
+					padding: 10px 20px;
+				}
+				:focus, 
+				:hover {
+				    background: $colorMetaFAUHomeBackground;
+				    @include transition(background, 0.1s);
+				}
+			}
+			li.fauhome::before {
+			    content: '';
+			    margin: 0;
+			}
+			
+			
+			
+		}
+		
+		*/
