--- a/css/sass/elements/_headlines.scss
+++ b/css/sass/elements/_headlines.scss
@@ -117,6 +117,15 @@ h3 {
 	    @extend .screen-reader-text;
 	}
 	
+	
+	#off-canvas & {
+	     @include px2rem($font-size-h3-small);
+	     // font-weight: normal;
+		border-bottom: 1px solid #ccc;
+		margin: 20px 0 0 0;
+		padding: 0 10px;
+	}
+	
 }
 
 h4 {
@@ -164,6 +173,7 @@ h6 {
 		margin-left: 15px;
 		margin-right: 15px;
 		
+		#footer &, 
 		#wp-content-wrap &, 
 		#content .container & {
 		    margin-left: 0px;
