--- a/css/sass/structure/content/_global.scss
+++ b/css/sass/structure/content/_global.scss
@@ -4,11 +4,11 @@
 
 
 #content {
-    padding: 20px 0 0 0;
-    
+   
+    padding: 0px;	
 
     @media (min-width: $screen-sm) {
-	padding-bottom: 30px;
+	padding: 20px 0 30px 0;
     }
     
     .container {
@@ -24,6 +24,7 @@
 	    @include px2rem($font-size-sidebar);
 	}
     }
+  
 }
 
 @media (max-width: $breakSM) {
@@ -39,7 +40,6 @@
 }
 
 @media (max-width: $breakMD) {
-
 	#content {
 	    ul.page-print-actions {
 		display: none;
@@ -49,7 +49,6 @@
 }
 
 @media (max-width: $breakLG) {
-
 	#content ul.page-print-actions {
 		top: 440px;
 	}
