--- a/css/sass/structure/_header.scss
+++ b/css/sass/structure/_header.scss
@@ -3,8 +3,7 @@
 /*-----------------------------------------------------------------------------------*/
  
  #header {
-    padding-top: 20px;
-    padding-bottom: 10px;
+    padding: 10px 15px;
     
     .row {    
 	height: 65px;
@@ -21,7 +20,7 @@
      }
      
     position: fixed;
-    top: 0;
+    top: 40px;
     left: 0;
     right: 0;
     background: #fff;
