--- a/css/sass/structure/_layout.scss
+++ b/css/sass/structure/_layout.scss
@@ -62,7 +62,21 @@ html, body, button {
     .search-input {
 	@extend .col-sm-8;
     }
+    .hero-navigation {
+	.quicklinks {
+	    @extend .col-xs-12;
+	    @extend .col-sm-3;
+	}
+	.infobar {
+	    @extend .col-xs-12;
+	    @extend .col-sm-6;
+	}
+    }
+    
 }
+
+
+
 
 .error-notice {
     @extend .col-sm-3;
