--- a/css/sass/structure/_meta.scss
+++ b/css/sass/structure/_meta.scss
@@ -10,7 +10,7 @@
 	top: 0;
 	left: 0;
 	right: 0;
-	z-index: 200;
+	z-index: 100;
 
 	.admin-bar & {
 	    top: 32px;
@@ -63,7 +63,8 @@
 
 
 .meta-search {
-    display: inline-block;
+   display: none;
+    
     
     .searchform {
 	    border: none;
@@ -73,7 +74,7 @@
 	    input[type="text"] {
 		    @include border-radius(20px);
 		    padding: 5px 35px 5px 10px;
-		    width: 160px;
+		    width: 220px;
 		    background: $colorMeta;
 		    border: none;
 		    outline: none;
@@ -86,11 +87,14 @@
 			    background-color: $colorMetaHover;
 		    }
 
-		    @media (min-width: $screen-md +1) {
+		    @media (min-width: $screen-sm +1) {
+			 width: 160px;
+		    }
+    		    @media (min-width: $screen-md +1) {
 			padding: 5px 35px 5px 35px;
 		    }
 		    @media (min-width: $screen-lg) {
-			width: 160px;
+			width: 200px;
 		    }
 
 	    }
@@ -118,30 +122,29 @@
 		    @extend .screen-reader-text;		
 	    }
 	    .searchicon {
+		display: inline;
 		@extend .fa;
 		@extend .fa-search;
 		position: relative;
 		margin-right: -30px;
 		color: #fff;
 
-		@media (max-width: $screen-md) {
-		      display: none;
-		}
+		
 	    }
     }
-
     @media (max-width: $screen-sm) {
-	position: absolute;
-	top: 10px;
-	right: 15px;
-	.admin-bar & {
-	    top: 56px;
+	width: 100%;
+
+	.searchform {
+	    text-align: center;
+
+	   
 	}
-	
-	z-index: 101;
-	
-	
     }
+    @media (min-width: $screen-sm + 1) {
+	display: inline-block;
+    }
+    
 }
 .meta-widget {
     display: inline-block;
